[package]
name = "pricefilter_db"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.9.2"
lambda_runtime = "0.9.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# Adding rusoto_core and rusoto_dynamodb for DynamoDB interaction
rusoto_core = "0.47.0"
rusoto_dynamodb = "0.47.0"
# openssl
openssl = { version = "0.10", features = ["vendored"] }
